# HTS

./: .gitignore  CONTRIBUTING.md  INSTALL  Makefile.am  Makefile.in  README.md  configure.ac  libnavcoinconsensus.pc.in
.tx/: config
build-aux/m4/: HTS_qt.m4  HTS_subdir_to_include.m4  navcoin_find_bdb48.m4
contrib/: README.md  gitian-build.sh  navcoin-cli.bash-completion  navcoin-qt.pro  navcoin-tx.bash-completion  navcoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  navcoin-qt.desktop  navcoin-qt.install  navcoin-qt.lintian-overrides  navcoin-qt.protocol  navcoin-tx.bash-completion  navcoin-tx.install  navcoind.bash-completion  navcoind.examples  navcoind.install  navcoind.lintian-overrides  navcoind.manpages  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  symbol-check.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-arm.yml  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  navcoind.conf  navcoind.init  navcoind.openrc  navcoind.openrcconf  navcoind.service  org.navcoin.bitcoind.plist
doc/: Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  npips.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: HTS-cli-res.rc  HTS-tx-res.rc  HTS-tx.cpp  HTSd-res.rc  HTSd.cpp  Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  NavCoin-4.0.files  NavCoin4-Qt.files  NavCoin4.files  addressindex.h  addrman.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  (+57 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: cfund.cpp  cfund.h  consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: HTS.cpp  HTS.qrc  HTS_locale.qrc  HTSgui.h  HTSstrings.cpp  HTSunits.h  NavCoin4.files  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  getaddresstoreceive.cpp  getaddresstoreceive.ui  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  navcoin.cpp  navcoinaddressvalidator.cpp  navcoinaddressvalidator.h  navcoinamountfield.cpp  navcoinamountfield.h  navcoingui.cpp  navcoinunits.cpp  navtechinit.cpp  navtechinit.h  (+66 more)
src/qt/forms/: coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: HTS_af_ZA.ts  HTS_ar.ts  HTS_be_BY.ts  HTS_ca@valencia.ts  HTS_cs.ts  HTS_cy.ts  HTS_de.ts  HTS_el.ts  HTS_es_CO.ts  HTS_es_DO.ts  HTS_es_MX.ts  HTS_es_VE.ts  HTS_fa.ts  HTS_fi.ts  HTS_fr.ts  HTS_fr_FR.ts  HTS_he.ts  HTS_hi_IN.ts  HTS_hr.ts  HTS_hu.ts  HTS_it_IT.ts  HTS_ja.ts  HTS_kk_KZ.ts  HTS_ku_IQ.ts  HTS_ms_MY.ts  HTS_pam.ts  HTS_pt_BR.ts  HTS_ru.ts  HTS_ru_RU.ts  HTS_sk.ts  HTS_sv.ts  HTS_ta.ts  HTS_tr.ts  HTS_ur_PK.ts  HTS_vi.ts  HTS_vi_VN.ts  HTS_zh_CN.ts  navcoin_af.ts  navcoin_bg.ts  navcoin_bg_BG.ts  (+45 more)
src/qt/res/: HTS-qt-res.rc
src/qt/res/icons/: HTS.icns
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: HTSconsensus.cpp  interpreter.h  ismine.h  navcoinconsensus.h  script.h  script_error.h  sigcache.h  standard.cpp  standard.h
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  navcoin-util-test.py  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  (+17 more)
src/test/data/: README.md  navcoin-util-test.json
src/univalue/lib/: univalue_escapes.h
src/utils/: dns_utils.cpp
src/wallet/: crypter.h  db.h  navtech.cpp  navtech.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+132 files in other folders)
